--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.10.1",
+    "history": "^4.6.1",
     "html-webpack-plugin": "^2.22.0",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
