--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "redux-form": "^6.6.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
-    "stellar-sdk": "^0.7.2",
-    "stellar-toolkit": "^0.1.5",
+    "stellar-sdk": "^0.7.3",
+    "stellar-toolkit": "0.1.9",
     "webpack": "^2.2.0",
     "webpack-dev-server": "2.2.0"
   }
