--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
     "stellar-sdk": "^0.7.3",
-    "stellar-toolkit": "0.2.0",
+    "stellar-toolkit": "^0.2.3",
     "webpack": "^2.2.0",
     "webpack-dev-server": "2.2.0"
   }
