--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "classnames": "^2.2.5",
-    "clipboard": "^1.5.16",
+    "clipboard": "^1.6.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.0.0",
     "decimal.js": "^7.1.0",
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.10.1",
+    "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.22.0",
     "intl": "^1.2.5",
