--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "express-http-proxy": "^0.10.1",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.22.0",
+    "instascan": "^1.0.0",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.2",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
+    "qs": "^6.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "next",
